--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=bio.css.map */
+@font-face {
+  font-family: "Avenir Next";
+  src: url(../assets/fonts/AvenirNextLTPro.ttf) format("truetype");
+}
+html, body, h1, h2 {
+  margin: 0;
+  padding: 0;
+  font-family: Avenir Next;
+}/*# sourceMappingURL=bio.css.map */
