--- a/styles/bio.css
+++ b/styles/bio.css
@@ -68,11 +68,14 @@ header nav ul li a {
   }
 }
 
+section {
+  padding: 16px 32px;
+}
+
 .hero {
   background-image: url("../assets/images/hero-bio.jpg");
   background-size: cover;
   height: 66vw;
-  padding: 0 16px;
   display: flex;
   align-items: center;
   color: #FFFFFF;
@@ -80,9 +83,6 @@ header nav ul li a {
   font-weight: 600;
 }
 
-.about {
-  padding: 16px 32px;
-}
 .about .about__header {
   font-size: 44px;
   font-weight: bold;
@@ -106,7 +106,6 @@ header nav ul li a {
 }
 
 .photo {
-  padding: 16px 32px;
   background-color: #E1E1E1;
 }
 .photo .photo__header {
@@ -153,6 +152,10 @@ header nav ul li a {
   font-size: 25px;
   font-weight: bold;
   padding: 16px 0;
+}
+.footer .footer__contact a {
+  text-decoration: none;
+  color: #FFFFFF;
 }
 .footer .footer__logo {
   font-size: 50px;
