--- a/styles/bio.css
+++ b/styles/bio.css
@@ -2,7 +2,7 @@
   font-family: "Avenir Next";
   src: url(../assets/fonts/AvenirNextLTPro.ttf) format("truetype");
 }
-html, body, h1, h2, h3 {
+html, body, h1, h2, h3, ul {
   margin: 0;
   padding: 0;
   font-family: Avenir Next;
@@ -22,13 +22,8 @@ header .navbar__logo a {
   color: #FFFFFF;
   text-decoration: none;
 }
-header nav {
-  font-size: 18px;
-}
 header nav ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
   display: flex;
 }
 header nav ul li {
@@ -48,23 +43,51 @@ header nav ul li a {
   text-decoration: none;
 }
 @media screen and (min-width: 768px) {
-  header h2 {
-    font-size: 44px;
+  header {
+    display: flex;
     height: 68px;
+    padding: 0 5vw;
+  }
+  header h2 {
     display: inline-block;
+    font-size: 1.35lh;
   }
   header nav {
     display: inline-block;
+  }
+  header nav ul {
+    padding: 0 1lh;
+  }
+  header nav ul li {
+    height: 68px;
+    line-height: 64px;
+    margin: 0 0.5lh;
+    font-size: 15px;
+    box-sizing: border-box;
   }
 }
 @media screen and (min-width: 1024px) {
-  header h2 {
-    font-size: 44px;
+  header {
+    display: flex;
     height: 68px;
+    padding: 0 10vw;
+  }
+  header h2 {
     display: inline-block;
+    font-size: 1.35lh;
   }
   header nav {
     display: inline-block;
+  }
+  header nav ul {
+    padding: 0 1lh;
+  }
+  header nav ul li {
+    height: 68px;
+    line-height: 64px;
+    margin: 0 0.5lh;
+    font-size: 15px;
+    box-sizing: border-box;
   }
 }
 
@@ -93,12 +116,13 @@ section {
   width: 100%;
 }
 .about .about__quote {
-  font-size: 28px;
+  font-size: 26px;
   font-weight: bold;
   line-height: 1.5em;
 }
 .about .about__description h3 {
   font-size: 28px;
+  width: 100%;
 }
 .about .about__description p {
   font-size: 26px;
@@ -159,4 +183,66 @@ section {
 }
 .footer .footer__logo {
   font-size: 50px;
+}
+
+@media screen and (min-width: 768px) {
+  section {
+    padding: 0 5vw;
+  }
+  .about__content {
+    padding: 0 6vw;
+  }
+  .about__content .about__musician {
+    font-size: 20px;
+  }
+  .about__content .about__description {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .about__content .about__description p {
+    width: 49%;
+    font-size: 18px;
+    line-height: 1.5em;
+  }
+  .photo__gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .photo__gallery img {
+    width: 30%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  section {
+    padding: 0 10vw;
+  }
+  .about__content {
+    padding: 0 6vw;
+  }
+  .about__content .about__musician {
+    font-size: 20px;
+  }
+  .about__content .about__description {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .about__content .about__description p {
+    width: 49%;
+    font-size: 18px;
+    line-height: 1.5em;
+  }
+  .photo__gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .photo__gallery img {
+    width: 30%;
+  }
+  .about__quote {
+    width: 78%;
+  }
 }/*# sourceMappingURL=bio.css.map */
