--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -3,174 +3,181 @@
 @use "./partials/mixins" as *;
 
 @font-face {
-    font-family: "Avenir Next";
-    src: url(../assets/fonts/AvenirNextLTPro.ttf) format("truetype");
+  font-family: "Avenir Next";
+  src: url(../assets/fonts/AvenirNextLTPro.ttf) format("truetype");
 }
 
 html, body, h1, h2, h3, ul {
-    margin: 0;
-    padding: 0;
-    font-family: Avenir Next;
+  margin: 0;
+  padding: 0;
+  font-family: Avenir Next;
 }
 
 header {
-    background-color: $black;
+  background-color: $black;
 
-    h2 {
+  h2 {
+    height: 35px;
+    font-size: 35px;
+    font-weight: 500;;
+    text-align: center;
+    padding: 15px 0;
+  }
+
+  .navbar__logo a {
+    color: $white;
+    text-decoration: none;
+  }
+
+  nav {
+
+    ul {
+      list-style-type: none;
+      display: flex;
+  
+      li {
+        width: 50%;
         height: 35px;
-        font-size: 35px;
-        font-weight: 500;;
+
+        font-size: 20px;
+        font-weight: 600;
+        color: $mercury;
         text-align: center;
-        padding: 15px 0;
-    }
-
-    .navbar__logo a {
-        color: $white;
-        text-decoration: none;
-    }
-
-    nav {
-
-        ul {
-            list-style-type: none;
-            display: flex;
-    
-            li {
-                width: 50%;
-                height: 35px;
-
-                font-size: 20px;
-                font-weight: 600;
-                color: $mercury;
-                text-align: center;
-                &.navbar--active, &:hover {
-                    color: $white;
-                    border-bottom: 4px solid $white;
-                }
-
-                a {
-                    color: inherit;
-                    text-decoration: none;
-                }
-            }
+        &.navbar--active, &:hover {
+          color: $white;
+          border-bottom: 4px solid $white;
         }
-    }
 
-    @include tablet-header;
-    @include desktop-header;
+        a {
+          color: inherit;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+
+  @include tablet-header;
+  @include desktop-header;
 }
 
 section {
-    padding: 16px 32px;
+  padding: 16px 32px;
 }
 
 .hero {
-    background-image: url("../assets/images/hero-bio.jpg");
-    background-size: cover;
-    height: 66vw;
-    display: flex;
-    align-items: center;
-    color: $white;
-    font-size: 38px;
-    font-weight: 600;
+  background-image: url("../assets/images/hero-bio.jpg");
+  background-size: cover;
+  height: 66vw;
+  display: flex;
+  align-items: center;
+  color: $white;
+  font-size: 38px;
+  font-weight: 600;
 }
 
 .about {
 
-    .about__header {
-        font-size: 44px;
-        font-weight: bold;
-        padding: 24px 0;
-        font-family: Avenir Next;
+  .about__header {
+    font-size: 44px;
+    font-weight: bold;
+    padding: 24px 0;
+    font-family: Avenir Next;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  .about__quote {
+    font-size: 26px;
+    font-weight: bold;
+    line-height: 1.5em;
+  }
+
+  .about__description {
+    h3 {
+      font-size: 28px;
+      width: 100%;
     }
 
-    img {
-        width: 100%;
+    p {
+      font-size: 26px;
+      line-height: 1.25em;
     }
-
-    .about__quote {
-        font-size: 26px;
-        font-weight: bold;
-        line-height: 1.5em;
-    }
-
-    .about__description {
-        h3 {
-            font-size: 28px;
-            width: 100%;
-        }
-
-        p {
-            font-size: 26px;
-            line-height: 1.25em;
-        }
-    }
+  }
 }
 
 .photo {
-    background-color: $mercury;
+  background-color: $mercury;
 
-    .photo__header {
-        font-size: 44px;
-        font-weight: bold;
-        padding: 24px 0;
-        font-family: Avenir Next;
-    }
+  .photo__header {
+    font-size: 44px;
+    font-weight: bold;
+    padding: 24px 0;
+    font-family: Avenir Next;
+  }
 
-    img {
-        width: 100%;
-        padding: 0 0 20px;
-    }
+  img {
+    width: 100%;
+    padding: 0 0 4vw;
+  }
 }
 
 .footer {
-    background-color: $black;
-    padding: 16px 32px;
-    color: $white;
+  background-color: $black;
+  padding: 16px 32px;
+  color: $white;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+
+  p, h3 {
+    font-size: 25px;
+    line-height: 1.4em;
+  }
+
+  .footer__header {
+    font-size: 44px;
+    font-weight: bold;
+    padding: 24px 0;
+    font-family: Avenir Next;
+    order: -3;
+  }
+
+  .footer__social {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    width: 35vw;
+    padding: 24px 0;
+    order: -2;
 
-    p {
-        font-size: 25px;
-        line-height: 1.4em;
+    img {
+      height: 44px;
+    }
+  }
+
+  .footer__contact {
+    padding: 16px 0;
+
+    h3 {
+      font-weight: bold;
+      padding: 16px 0;
     }
 
-    .footer__header {
-        font-size: 44px;
-        font-weight: bold;
-        padding: 24px 0;
-        font-family: Avenir Next;
+    a {
+      text-decoration: none;
+      color: $white;
     }
+  }
 
-    .footer__social {
-        display: flex;
-        justify-content: space-between;
-        width: 35vw;
-        padding: 24px 0;
+  .footer__logo {
+    font-size: 50px;
+    order: 1
+  }
 
-        img {
-            height: 44px;
-        }
-    }
-
-    .footer__contact {
-        padding: 16px 0;
-
-        h3 {
-            font-size: 25px;
-            font-weight: bold;
-            padding: 16px 0;
-        }
-
-        a {
-            text-decoration: none;
-            color: $white;
-        }
-    }
-
-    .footer__logo {
-        font-size: 50px;
-    }
+  .footer__copyright {
+    order: 2;
+  }
 }
 
 @include tablet;
