--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,29 +1,30 @@
 @font-face {
   font-family: "Avenir Next";
-  src: url("../../assets/fonts/AvenirNextLTPro-Regular.otf") format(OpenType);
-  src: url("../../assets/fonts/Alternative/AvenirNextLTPro.ttf") format(truetype);
+  src: url("../assets/fonts/AvenirNextLTPro-Regular.otf") format(OpenType);
+  src: url("../assets/fonts/AvenirNextLTPro.ttf") format(truetype);
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: "Avenir Next";
-  src: url("../../assets/fonts/AvenirNextLTPro-Demi.otf") format(OpenType);
-  src: url("../../assets/fonts/Alternative/AvenirNextLTProDemi.ttf") format(truetype);
+  src: url("../assets/fonts/AvenirNextLTPro-Demi.otf") format(OpenType);
+  src: url("../assets/fonts/AvenirNextLTProDemi.ttf") format(truetype);
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
   font-family: "Avenir Next";
-  src: url("../../assets/fonts/AvenirNextLTPro-Bold.otf") format(OpenType);
-  src: url("../../assets/fonts/Alternative/AvenirNextLTProBold.ttf") format(truetype);
+  src: url("../assets/fonts/AvenirNextLTPro-Bold.otf") format(OpenType);
+  src: url("../assets/fonts/AvenirNextLTProBold.ttf") format(truetype);
   font-weight: 900;
   font-style: normal;
 }
-@font-face {
-  font-family: "Avenir Next";
-  src: url(../assets/fonts/AvenirNextLTPro.ttf) format("truetype");
-}
-html, body, h1, h2, h3, ul {
+html,
+body,
+h1,
+h2,
+h3,
+ul {
   margin: 0;
   padding: 0;
   font-family: Avenir Next;
@@ -172,7 +173,8 @@ section {
   flex-direction: column;
   align-items: baseline;
 }
-.footer p, .footer h3 {
+.footer p,
+.footer h3 {
   font-size: 25px;
   line-height: 1.4em;
 }
@@ -246,7 +248,8 @@ section {
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  .footer p, .footer h3 {
+  .footer p,
+  .footer h3 {
     font-size: 1.4vw;
     line-height: 1.4em;
   }
@@ -319,7 +322,8 @@ section {
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  .footer p, .footer h3 {
+  .footer p,
+  .footer h3 {
     font-size: 1.4vw;
     line-height: 1.4em;
   }
