--- a/styles/bio.css
+++ b/styles/bio.css
@@ -43,6 +43,20 @@ h2 {
   font-family: Avenir Next;
 }
 
+button {
+  background-color: #323232;
+  color: #FFFFFF;
+  height: 40px;
+  min-width: 150px;
+  border-radius: 4px;
+  border: none;
+  font-weight: 700;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #000000;
+}
+
 header {
   background-color: #323232;
 }
@@ -133,9 +147,12 @@ section {
 .hero {
   background-image: url("../assets/images/hero-bio.jpg");
   background-size: cover;
+  box-shadow: inset 0 0 0 2000px rgba(50, 50, 50, 0.5);
   height: 66vw;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   color: #FFFFFF;
   font-size: 38px;
   font-weight: 600;
@@ -241,19 +258,6 @@ section {
 .comments__form-submit {
   padding: 0.5rem 0;
   float: right;
-}
-.comments__form-submit button {
-  background-color: #323232;
-  color: #FFFFFF;
-  height: 40px;
-  min-width: 150px;
-  border-radius: 4px;
-  border: none;
-  font-weight: 700;
-  cursor: pointer;
-}
-.comments__form-submit button:hover {
-  background-color: #000000;
 }
 .comments__comments-list {
   display: flex;
