--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -27,6 +27,21 @@ h2 {
   font-family: Avenir Next;
 }
 
+button {
+  background-color: $black;
+  color: $white;
+  height: 40px;
+  min-width: 150px;
+  border-radius: 4px;
+  border: none;
+  font-weight: 700;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $darkblack;
+  }
+}
+
 header {
   background-color: $black;
 
@@ -82,9 +97,12 @@ section {
 .hero {
   background-image: url("../assets/images/hero-bio.jpg");
   background-size: cover;
+  box-shadow: inset 0 0 0 2000px rgba($black, 0.5);
   height: 66vw;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   color: $white;
   font-size: 38px;
   font-weight: 600;
@@ -205,21 +223,6 @@ section {
   &__form-submit {
     padding: 0.5rem 0;
     float: right;
-
-    button {
-      background-color: $black;
-      color: $white;
-      height: 40px;
-      min-width: 150px;
-      border-radius: 4px;
-      border: none;
-      font-weight: 700;
-      cursor: pointer;
-
-      &:hover {
-        background-color: $darkblack;
-      }
-    }
   }
 
   &__comments-list {
