--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -98,7 +98,7 @@ section {
   background-image: url("../assets/images/hero-bio.jpg");
   background-size: cover;
   box-shadow: inset 0 0 0 2000px rgba($black, 0.5);
-  height: 66vw;
+  height: 60vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -106,6 +106,9 @@ section {
   color: $white;
   font-size: 38px;
   font-weight: 600;
+  @include tablet {
+    height: 55vw;
+  }
 }
 
 .about {
@@ -148,6 +151,8 @@ section {
 }
 
 .comments {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
 
   &__wrapper {
     margin: auto;
@@ -167,15 +172,25 @@ section {
   }
 
   &__comment-avatar {
-    width: 2rem;
-    height: 2rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    max-height: 36px;
+    max-width: 36px;
     background-size: cover;
     background-position: top center;
     background-color: $mercury;
     border-radius: 50%;
+    @include tablet {
+      max-height: 48px;
+      max-width: 48px;
+    }
 
     &--form {
       background-image: url("../assets/images/Mohan-muruge.jpg");
+      margin-top: 2rem;
+      @include tablet {
+        margin-top: 1.8rem;
+      }
     }
   }
 
