--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -112,7 +112,6 @@ section {
 }
 
 .about {
-
   img {
     width: 100%;
   }
@@ -214,7 +213,7 @@ section {
       }
 
       &--error {
-        border-color: #D22D2D;
+        border-color: #d22d2d;
       }
 
       &--textarea {
