--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -42,52 +42,74 @@ button {
   }
 }
 
-header {
+.header {
   background-color: $black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  @include tablet {
+    flex-direction: row;
+    padding: 0 1rem;
+  }
+  @include desktop {
+    padding: 0 3rem;
+  }
 
-  .navbar__logo {
-    height: 35px;
-    font-size: 35px;
+  &__logo {
+    line-height: 2rem;
+    font-size: 1.5rem;
     font-weight: 500;
-    text-align: center;
-    padding: 15px 0;
+    padding: 0.75rem 0 0;
+    color: $white;
+    text-decoration: none;
+    @include tablet {
+      padding: 0;
+    }
+  }
+}
 
-    a {
+.navbar {
+  width: 100%;
+
+  &__list {
+    display: flex;
+    list-style: none;
+    @include tablet {
+      padding-left: 2rem;
+    }
+  }
+
+  &__item {
+    width: 50%;
+    @include tablet {
+      width: auto;
+      padding: 0 1rem;
+    }
+  }
+
+  &__link {
+    color: $mercury;
+    padding: 0.5rem 0;
+    text-decoration: none;
+    display: inline-flex;
+    border-bottom: 4px solid $black;
+    width: 100%;
+    justify-content: space-around;
+    @include tablet {
+      width: auto;
+      justify-content: normal;
+    }
+    &--active {
+      font-weight: bold;
+    }
+    &--active,
+    &:hover {
       color: $white;
-      text-decoration: none;
+      border-bottom: 4px solid $white;
     }
   }
-
-  nav {
-    ul {
-      list-style-type: none;
-      display: flex;
-
-      li {
-        width: 50%;
-        height: 35px;
-
-        font-size: 20px;
-        font-weight: 600;
-        color: $mercury;
-        text-align: center;
-
-        &.navbar--active,
-        &:hover {
-          color: $white;
-          border-bottom: 4px solid $white;
-        }
-
-        a {
-          color: inherit;
-          text-decoration: none;
-        }
-      }
-    }
-  }
-
-  @include tablet-header;
-  @include desktop-header;
 }
 
 section {
